@@ -1,5 +1,10 @@
 2005-12-20  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
+	PR fortran/24268
+	* gfortran.dg/fmt_white.f: New test.
+
+2005-12-20  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
 	PR libgfortran/25463
 	* gfortran.dg/advance.f90: New test.
 
